--- a/jpf.properties
+++ b/jpf.properties
@@ -49,7 +49,7 @@ jpf-symbc.test_classpath=\
 
 ### configurations specific to the symbc project
 
-jpf-symbc.peer_packages = gov.nasa.jpf.symbc
+# jpf-symbc.peer_packages = gov.nasa.jpf.symbc
 
 jvm.insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
 
